# gitlab-clone-mcp-server

./: .env.example  .gitignore  LICENCE  MANIFEST.in  README.md  TRANSPORT_OPTIONS.md  connection_config.json  main.py  pyproject.toml  requirements.txt
examples/: README.md  client_example.py  headers_integration.py  mount_to_asgi.py  run_sse.py  run_stdio.py  run_streamable_http.py
gitlab_clone_mcp_server/: __init__.py  server.py
