[project]
name = "gitlab-clone-mcp-server"
version = "1.1.0"
description = "Model Context Protocol server for GitLab API integration"
authors = [{name = "GitLab MCP", email = "gitlab-mcp@example.com"}]
readme = "README.md"
license = {text = "MIT"}
keywords = ["mcp", "gitlab", "api", "server"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp[cli]>=1.12.1",
    "httpx>=0.25.0",
    "starlette>=0.37.0",
    "uvicorn>=0.24.0",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/skmprb/gitlab-clone-mcp-server"
Repository = "https://github.com/skmprb/gitlab-clone-mcp-server"
Issues = "https://github.com/skmprb/gitlab-clone-mcp-server/issues"

[project.scripts]
gitlab-mcp = "gitlab_clone_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"